# SynopFrame

./: .gitignore  Cheat-Sheet-Mac.md  Cheat-Sheet-Win.md  Input-Specification.md  Install-Mac.md  Install-Win.md  README.md
demo_RNA_Tile/: demo_RNA_Tile.hipnc
demo_cube/: demo_cube.hipnc
demo_icosahedron10Frames/: icosahedron_cndo_10Frames.hipnc
demo_icosahedron10Frames/input/: design.oxdna.top  design.synopspace.hb  trajectory_run.synopspace.hb  trajectory_run.synopspace.pca_coords
houdini19.5/: houdini.env
houdini19.5/SynopFrame_scripts/: SynopSpace_xform_handle.py  cache.py  output.py
houdini19.5/desktop/: SynopSpace_dev.desk  SynopSpace_run.desk
houdini19.5/otls/: SynopFrame_PCA_Sync.hdanc  SynopSpace_xform.hdanc  color_T.hdanc  load_PCA_Coords.hdanc  load_PCA_clustering_data.hdanc  my_gl.hdanc  object_luod.dev.oxDNA_building_blocks.1.0.hdanc  oxDNA_building_blocks.hdanc  oxDNA_create_schematic3D.hdanc  oxDNA_draw_NT.hdanc  oxDNA_load.hdanc  oxDNA_load_all_frame_with_hb.hdanc  oxDNA_load_conf.hdanc  oxDNA_load_hb_dat.hdanc  oxDNA_load_top.hdanc  oxDNA_load_with_hb_status.hdanc  oxDNA_points_to_tubes.hdanc  oxDNA_separate_frame.hdanc  point_glsl.hdanc  sop_luod.dev.oxDNA_Schematic3D.1.0.hdanc  sop_luod.dev.viewer_state_selection.2.0.hdanc  sop_luod.dev.viewer_state_selection.2.1.hdanc  viewer_state_selection_action.hdanc
src/hdk/SynopFrame_Parser/src/: CMakeLists.txt  GEO_oxdna_dat_Translator.C  GEO_synopspace_custom_Translator.C  GEO_synopspace_custom_Translator.h  GEO_synopspace_hb_Translator.C  GEO_synopspace_hb_Translator.h
(+12 files in other folders)
